// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Associated Buildings/Parcels view Associated buildings list renders correctly 1`] = `
<div
  class="list-group"
>
  <label
    class="label header"
    style="margin: 5px 0px;"
  >
    Associated Buildings
  </label>
  <div
    class="list-group-item"
  >
    Click a building name to view its details
  </div>
  <div
    class="list-group-item"
  >
    <a
      class="styled-link"
      href="/mapview?sidebar=true&disabled=true&loadDraft=false&buildingId=100"
    >
      test name
    </a>
  </div>
</div>
`;

exports[`Associated Buildings/Parcels view Associated parcels list renders correctly 1`] = `
<div
  class="list-group"
>
  <label
    class="label header"
    style="margin: 5px 0px;"
  >
    Associated Land
  </label>
  <div
    class="list-group-item"
  >
    Click a parcel's PID/PIN to view its details
  </div>
  <div
    class="list-group-item"
  >
    <a
      class="styled-link"
      href="/mapview?sidebar=true&disabled=true&loadDraft=false&parcelId=1"
    >
      000-000-000
    </a>
  </div>
</div>
`;

exports[`InfoContent View InfoContent renders correctly 1`] = `
.c1 {
  margin: 0px;
  width: 300px;
}

.c2 {
  width: 110px;
  max-width: 135px;
  padding-right: 10px;
  padding-left: 0px;
}

.c3 {
  max-width: 1px;
  padding: 0px;
  background-color: rgba(96, 96, 96, 0.2);
}

.c4 {
  padding-left: 10px;
  padding-right: 0px;
}

.c0 {
  margin: 0px 0px 10px 0px;
}

.c5 {
  background-color: #deefff;
  padding: 5px 15px;
  margin: 0px 1px 5px 1px;
}

.c5 em {
  color: darkVariantColor;
}

.c5 a {
  color: slideOutBlue;
}

<div
  class="list-group"
>
  <label
    class="label header"
  >
    <template>
      <svg />
    </template>
    Parcel Identification
  </label>
  <div
    class="c0 row"
  >
    <div
      class="c1 row"
    >
      <div
        class="c2 col"
      >
        <div
          class="left-side list-group-item"
        >
          <label
            class="label"
          >
            PID
          </label>
        </div>
      </div>
      <div
        class="c3 col"
      />
      <div
        class="c4 col"
      >
        <div
          class="list-group-item"
        >
          000-000-000
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 row"
  >
    <div
      class="c1 row"
    >
      <div
        class="c2 col"
      >
        <div
          class="left-side list-group-item"
        >
          <label
            class="label"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="c3 col"
      />
      <div
        class="c4 col"
      >
        <div
          class="list-group-item"
        >
          test name
        </div>
      </div>
    </div>
    <div
      class="c1 row"
    >
      <div
        class="c2 col"
      >
        <div
          class="left-side list-group-item"
        >
          <label
            class="label"
          >
            Ministry
          </label>
        </div>
      </div>
      <div
        class="c3 col"
      />
      <div
        class="c4 col"
      >
        <div
          class="list-group-item"
        >
          Ministry of Advanced Education
        </div>
      </div>
    </div>
    <div
      class="c1 row"
    >
      <div
        class="c2 col"
      >
        <div
          class="left-side list-group-item"
        >
          <label
            class="label"
          >
            Owning agency
          </label>
        </div>
      </div>
      <div
        class="c3 col"
      />
      <div
        class="c4 col"
      >
        <div
          class="list-group-item"
        >
          Kwantlen Polytechnic University
        </div>
      </div>
    </div>
    <div
      class="c1 row"
    >
      <div
        class="c2 col"
      >
        <div
          class="left-side list-group-item"
        >
          <label
            class="label"
          >
            Classification
          </label>
        </div>
      </div>
      <div
        class="c3 col"
      />
      <div
        class="c4 col"
      >
        <div
          class="list-group-item"
        >
          Core Operational
        </div>
      </div>
    </div>
    <div
      class="c1 row"
    >
      <div
        class="c2 col"
      >
        <div
          class="left-side list-group-item"
        >
          <label
            class="label"
          >
            Project Number
          </label>
        </div>
      </div>
      <div
        class="c3 col"
      />
      <div
        class="c4 col"
      >
        <div
          class="list-group-item"
        >
          SPP-00001
          <br />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c5 row"
  >
    <em>
      For more information on this property, contact
       
      <a
        href="mailto:RealPropertyDivision.Disposals@gov.bc.ca"
      >
        Strategic Real Estate Services (SRES)
      </a>
    </em>
  </div>
</div>
`;
